# mpesa-parser

./: .coverage  justfile  main.py  pyproject.toml
.github/workflows/: test.yml
.streamlit/: config.toml
src/: analytics.py  app.py  clean.py  database.py  engine.py  extract.py  normalize.py  pipeline.py  security.py  utils.py
tests/: test_analytics.py  test_app.py  test_clean.py  test_database.py  test_engine.py  test_env.py  test_normalize.py  test_pipeline.py  test_security.py  test_utils.py
